Add toList() method to BatchIterator
Mirrors Stream#toList